--- a/app/src/main/res/layout/start_game.xml
+++ b/app/src/main/res/layout/start_game.xml
@@ -9,16 +9,17 @@
         android:layout_width="241dp"
         android:layout_height="201dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/progressBar"
-        app:layout_constraintStart_toStartOf="@+id/progressBar"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="@+id/blood"
+        app:layout_constraintStart_toStartOf="@+id/blood"
+        app:layout_constraintTop_toBottomOf="@+id/blood"
         app:srcCompat="@drawable/images" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/blood"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="265dp"
         android:layout_height="29dp"
+        android:max="1000"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -33,7 +34,7 @@
         android:layout_marginEnd="28dp"
         android:text="血量"
         android:textSize="12dp"
-        app:layout_constraintEnd_toStartOf="@+id/progressBar"
+        app:layout_constraintEnd_toStartOf="@+id/blood"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <androidx.recyclerview.widget.RecyclerView
